@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2003-2007 - TortoiseSVN
+// Copyright (C) 2003-2008 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -84,7 +84,7 @@ public:
 	enum 
     { 
         IDD = IDD_REVISIONGRAPH,
-        WM_WORKERTHREADDONE = WM_USER +1
+        WM_WORKERTHREADDONE = WM_APP +1
     };
 
 
